--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+# Golang ignores
 #
 # Binaries for programs and plugins
 *.exe
@@ -19,3 +18,18 @@
 
 # Go workspace file
 go.work
+
+# Hugo ignores
+# Generated files by hugo
+/public/
+/resources/_gen/
+/assets/jsconfig.json
+hugo_stats.json
+
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
+
+# Temporary lock file while building
+/.hugo_build.lock
