--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://bashfulmusings.dev'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Bashful Musings'
+theme = 'hugo-theme-stack'
